EXTRA_DIST=cliptst2.ps				\
closepathtest.ps				\
figtext.ps				\
colrtest.ps					\
eofill.ps					\
eschertr.ps					\
illusion.ps					\
imagetest_1.ps					\
imagetest_2.ps					\
imagetest_3.ps					\
largetextspace.ps				\
letters.ps					\
oneimg.ps					\
pathtest.ps					\
spiral.ps					\
textmat.ps					\
twopages.ps					\
woglim.ps
